// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cvnUAz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ciHyFu"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bVaHlQ"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 eTttHY"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 iheCTs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 laNGQF"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eEYars"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 hFEsIS"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 iEzZsk"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 dXMFEr"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 fUeOYX"
            >
              <a
                class="StyledButton-sc-323bzc-0 ZXZXE"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kGhSUQ"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 uBxuw"
      >
        <span
          class="StyledText-sc-1sadyjn-0 kiZVox"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kGhSUQ"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 bVaHlQ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ekPFxt FileInput__ContentsBox-sc-1jzq7im-0 cWXikG"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 USRwM"
          >
            <span
              class="StyledText-sc-1sadyjn-0 bsTMTM FileInput__Message-sc-1jzq7im-2 gfzwDx"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 iMFFKf"
              tabindex="0"
            >
              browse
            </a>
          </div>
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 dByZlI"
            type="file"
          />
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kGhSUQ"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 bcuKhi"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bVaHlQ"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iWggmU"
          >
            <button
              aria-label="Change settings"
              class="StyledButton-sc-323bzc-0 btzCnY"
              type="button"
            >
              <svg
                aria-label="Brush"
                class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                viewBox="0 0 24 24"
              >
                <path
                  d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cvnUAz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 PVrDc"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bVaHlQ"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 hzTDiM"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 iheCTs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 laNGQF"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eEYars"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 hFEsIS"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 iEzZsk"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fUeOYX"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 kYtlmw"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gsTXLM FormField__FormFieldContentBox-sc-m9hood-1 jVcIHD"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 fKwwIt"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              start with
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gsTXLM FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: blank"
                class="StyledButton-sc-323bzc-0 ghVuhX Select__StyledSelectDropButton-sc-17idtfo-2 ikQPYb"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dsfsDz"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iShJPx"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 fKwwIt Select__SelectTextInput-sc-17idtfo-0 bQAqdj"
                        name="source"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value="blank"
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 hqRAEA"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 llpfFt"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 pdYPx FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jzOfgr"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bklLuJ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fuayET"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 cPYtxo"
          >
            <button
              class="StyledButton-sc-323bzc-0 ZXZXE"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cvnUAz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 PVrDc"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bVaHlQ"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 hzTDiM"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 iheCTs"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 laNGQF"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eEYars"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 hFEsIS"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 iEzZsk"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fUeOYX"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 kYtlmw"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 kKhdEN"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gsTXLM FormField__FormFieldContentBox-sc-m9hood-1 jVcIHD"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 fKwwIt"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              start with
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 gsTXLM FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: blank"
                class="StyledButton-sc-323bzc-0 ghVuhX Select__StyledSelectDropButton-sc-17idtfo-2 ikQPYb"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dsfsDz"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 iShJPx"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 fKwwIt Select__SelectTextInput-sc-17idtfo-0 bQAqdj"
                        name="source"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value="blank"
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 hqRAEA"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 llpfFt"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 pdYPx FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jzOfgr"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bklLuJ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fuayET"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 gJrKvj"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 cPYtxo"
          >
            <button
              class="StyledButton-sc-323bzc-0 ZXZXE"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cvnUAz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ehjiZU"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gUGyqY"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 cltMly FormField__FormFieldBox-sc-m9hood-0 jTOPYT"
          >
            <label
              class="StyledText-sc-1sadyjn-0 kUxDfg"
            >
              Select screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 pdYPx FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iNDmPr"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="empty page"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="empty page"
                      name="template"
                      tabindex="0"
                      type="radio"
                      value="empty page"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 bklLuJ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fuayET"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    empty page
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="dashboard"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="dashboard"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="dashboard"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    dashboard
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="list"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="list"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="list"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    list
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="table"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="table"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="table"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    table
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="details"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="details"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="details"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    details
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 qdAYv"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kwYmqp"
                  for="wizard"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hFizZH StyledRadioButton-sc-g1f6ld-5 hXfoNY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
                      id="wizard"
                      name="template"
                      tabindex="-1"
                      type="radio"
                      value="wizard"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 yZdiZ StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    wizard
                  </span>
                </label>
              </div>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 ceqcKv"
          >
            <button
              class="StyledButton-sc-323bzc-0 ZXZXE"
              title="select screen template"
              type="submit"
            >
              Select
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cvnUAz"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 PBgFD"
      id="designer-canvas"
      style="height: 1px;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fybjsI"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jloYeY"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gsnTZi jfxDfq"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 hnrRJw"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
